--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "tsc && node dist/tests.js"
   },
   "dependencies": {
+    "jsfxr": "^1.2.0",
     "typescript": "^4.9.4"
   },
   "author": "",
