--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist",
     "start": "http-server .",
     "test": "tsc && node dist/tests.js"
   },
